fix visible ruby-logo on page

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -10,7 +10,7 @@ body{
 	height: 100vh;
 }
 .img-ruby{
-	background: url('ruby-logo.png');
+	background-image: image-url('ruby-logo.png');
 	background-repeat: no-repeat;
 	background-size: contain;
 	height: 150px;
